--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  color:#5F2601;
+}
+
 h1 {
-    color: #ffdd6f;
-    font-size: 400%;
+    color: #5F2601;
+    font-size: 200%;
     text-align: center;
     font: bold;
   }
+.content {
+  color:#5F2601;
+  font-size: 150%;
+  font: bold;
+}
