--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ h1 {
   font-size: 150%;
   font: bold;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
