--- a/style.css
+++ b/style.css
@@ -1,23 +1,52 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-  color:#5F2601;
-}
 
-h1 {
-    color: #5F2601;
-    font-size: 200%;
-    text-align: center;
-    font: bold;
-  }
-.content {
-  color:#5F2601;
-  font-size: 150%;
-  font: bold;
-}
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 30%;
-}
+      body {
+        background: #98ccc4;
+        font-family: "Courier New", monospace;
+      }
+
+      .content {
+        max-width: 600px;
+        margin: auto;
+        background: #fff883;
+        padding: 10px;
+      }
+      td,
+      th {
+        border: 1px solid #000000;
+        text-align: left;
+        padding: 8px;
+        vertical-align: top;
+      }
+      a:link,
+      a:visited {
+        background-color: #ff5900;
+        color: #fff883;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+      }
+
+      a:hover,
+      a:active {
+        background-color: #ffd000;
+      }
+      h5,
+      dt {
+        color: #1bb49d;
+        font-weight: bold;
+      }
+      h1 {
+        text-align: center;
+      }
+      table,
+      th,
+      td {
+        border: 4px solid #fff883;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        background-color: #ffd000;
+      }
+
+  
