--- a/style.css
+++ b/style.css
@@ -1,55 +1,71 @@
+body {
+  background: #98ccc4;
+  font-family: "Courier New", monospace;
+}
 
-      body {
-        background: #98ccc4;
-        font-family: "Courier New", monospace;
-      }
+.content {
+  max-width: 600px;
+  margin: auto;
+  background: #fff883;
+  padding: 10px;
+}
+td,
+th {
+  border: 1px solid #000000;
+  text-align: left;
+  padding: 8px;
+  vertical-align: top;
+}
+a:link,
+a:visited {
+  background-color: #ff5900;
+  color: #fff883;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
 
-      .content {
-        max-width: 600px;
-        margin: auto;
-        background: #fff883;
-        padding: 10px;
-      }
-      td,
-      th {
-        border: 1px solid #000000;
-        text-align: left;
-        padding: 8px;
-        vertical-align: top;
-      }
-      a:link,
-      a:visited {
-        background-color: #ff5900;
-        color: #fff883;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-      }
+a:hover,
+a:active {
+  background-color: #ffd000;
+}
+h5,
+dt {
+  color: #1bb49d;
+  font-weight: bold;
+}
+h1 {
+  text-align: center;
+}
+table,
+th,
+td {
+  border: 4px solid #fff883;
+  border-collapse: collapse;
+}
 
-      a:hover,
-      a:active {
-        background-color: #ffd000;
-      }
-      h5,
-      dt {
-        color: #1bb49d;
-        font-weight: bold;
-      }
-      h1 {
-        text-align: center;
-      }
-      table,
-      th,
-      td {
-        border: 4px solid #fff883;
-        border-collapse: collapse;
-      }
-      th,
-      td {
-        background-color: #ffd000;
-      }
+td {
+  background-color: #ffd000;
+}
 b {
   color: #804405;
 }
 
-  
+h7 {
+  color: #b58f12;
+}
+
+h8 {
+  color: #e6462e;
+}
+
+h9 {
+  color: #4aa31a;
+}
+
+h10 {
+  color: #1883db;
+}
+h11 {
+  color: black;
+}
