🍎❤️ Checkpoint ./HeathersStyle.css:65991231/84 ./Heathers.html:65991231/470

--- a/HeathersStyle.css
+++ b/HeathersStyle.css
@@ -43,7 +43,7 @@ th {
         background-color: #421003;
       }
 b {
-  color: #804405;
+  color: #ebbf91;
 }
  h1 {
    color: #ff5729;
@@ -59,7 +59,7 @@ h6 {
         text-align: center;
       }
 h7 {
-  color: #b58f12;
+  color: #ffd738;
 }
 
 h8 {
@@ -67,7 +67,7 @@ h8 {
 }
 
 h9 {
-  color: #4aa31a;
+  color: #8ce841;
 }
 
 h10 {
