--- a/HeathersStyle.css
+++ b/HeathersStyle.css
@@ -76,3 +76,8 @@ h10 {
 h11 {
   color: black;
 }
+audio {
+    filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+    width: 100%;
+    height: 25px;
+}
