--- a/MainPageStyle.css
+++ b/MainPageStyle.css
@@ -49,11 +49,15 @@ b {
    color: #ff5729;
         text-align: center;
       }
-h5,
+  h5 {
+    color: #1bb49d;
+    font-weight: bold;
+  }
       dt {
         color: #1bb49d;
-        font-weight: bold;
+        
       }
+
 h6 {
   color: #ff5729;
         text-align: center;
