👍🏗 Checkpoint ./MainPageStyle.css:65991231/646 ./index.html:65991231/6757

--- a/MainPageStyle.css
+++ b/MainPageStyle.css
@@ -1,5 +1,5 @@
 body {
-      background-image: url(https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/rottweilers?v=1721070579574);
+      background-color: #074c7d;
       font-family: "Courier New", monospace;
 }
  h1 {
