--- a/slime-tut-STYLE.css
+++ b/slime-tut-STYLE.css
@@ -6,7 +6,7 @@ body {
       .content {
         max-width: 960px;
         margin: auto;
-        background: #260b0c;
+        background: #260b1d;
         padding: 10px;
       }
 td,
@@ -18,8 +18,8 @@ th {
 }
       a:link,
       a:visited {
-        background-color: #ff5900;
-        color: #260b0c;
+        background-color: #ff0095;
+        color: #260b1d;
         text-align: center;
         text-decoration: none;
         display: inline-block;
@@ -27,26 +27,26 @@ th {
 
       a:hover,
       a:active {
-        background-color: #421003;
+        background-color: #42031f;
       }
 
 
  table,
       th,
       td {
-        border: 6px solid #260b0c;
+        border: 6px solid #260b1d;
         border-collapse: collapse;
       }
 
       
       td {
-        background-color: #421003;
+        background-color: #42031f;
       }
 b {
-  color: #ebbf91;
+  color: #eb91c4;
 }
  h1 {
-   color: #ff5729;
+   color: #ff2994;
         text-align: center;
       }
 h5,
@@ -55,7 +55,7 @@ h5,
         font-weight: bold;
       }
 h6 {
-  color: #ff5729;
+  color: #ff2994;
         text-align: center;
       }
 h7 {
