--- a/HeathersStyle.css
+++ b/HeathersStyle.css
@@ -1,5 +1,9 @@
 body {
-      background-image: url(https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/rottweilers?v=1721070579574);
+    background-image: url('https://m.media-amazon.com/images/I/51pO1s0YD9L._AC_UF1000,1000_QL80_.jpg');  
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+  
       font-family: "Courier New", monospace;
 }
 
