--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,5 +1,5 @@
 body {
-      background-image: url('https://img.freepik.com/free-vector/blank-white-notepaper-design_53876-118304.jpg');
+      background-image: url('https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-27_231115898.png?v=1722111133393');
       background-repeat: no-repeat;
       background-attachment: fixed;  
       background-size: cover;
