🚁🙍 Checkpoint ./index.html:65991231/457 ./indexStyle.css:65991231/194 ./Ramblings.html:65991231/706

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -84,3 +84,8 @@ audio {
 img {
   border: 5px solid #0e2d63;
 }
+marquee {
+  background-color: #c4ff29;
+  font-weight: bold;
+  color: #0e2d63;
+}
