--- a/indexStyle.css
+++ b/indexStyle.css
@@ -95,7 +95,6 @@ marquee {
   background-color: transparent;
   width: 110px;
   height: 272px;
-  border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -125,13 +124,13 @@ marquee {
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbbbbb;
+  background-color: #94c90a;
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
+  background-color: #94c90a;
   color: white;
   transform: rotateY(180deg);
 }
